fixed bug: visible scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,16 @@ z-indexes
 /* fonts */
 /* @import url("https://fonts.googleapis.com/css?family=Karla:400|Playfair+Display+SC:400"); */
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+html::-webkit-scrollbar {
+  display: none;
+}
+
 html {
   font-size: 100%;
+  /* Hide scrollbar */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 } /*16px*/
 
 :root {
@@ -96,13 +104,6 @@ body {
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
-  /* Hide scrollbar */
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
-/* Hide scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar {
-  display: none;
 }
 
 p {
